# Hydrobox

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: bmp_read.hpp  main.cpp
